@@ -1,15 +1,15 @@
 {
   "type": "minecraft:crafting_shaped",
   "pattern": [
-    "asa",
+    "sms",
     "wgw",
-    "aca"
+    "scs"
   ],
   "key": {
-    "a": {
-      "tag": "forge:plates/aluminum"
-    },
     "s": {
+      "tag": "forge:plates/silver"
+    },
+    "m": {
       "item": "overpowered:matter_energy_transformer"
     },
     "w": {
