@@ -2,8 +2,8 @@
   "type": "minecraft:crafting_shaped",
   "pattern": [
     "tet",
-    "vrv",
-    "tct"
+    "ere",
+    "ncn"
   ],
   "key": {
     "t": {
@@ -15,7 +15,7 @@
     "c": {
       "item": "addsynth_energy:circuit_tier_9"
     },
-    "v": {
+    "n": {
       "item": "overpowered:nullified_power_core"
     },
     "e": {
