@@ -3,6 +3,8 @@ NEW:
   Some vanilla items can now be found in the ADDSynth Materials Creative Tab.
   Unidentified Item drops now drop for the Piglin, Piglin Brute, Hoglin, Zoglin, and the Warden.
 CHANGED:
+  The Matter Compressor's crafting recipe changed to use 3 Energy Stabilizers instead of 1.
+  Changed the Crystal Energy Extractor's crafting recipe to use Silver Plates instead of Aluminum Plates.
   Items in the Materials Creative Tab are sorted by Item type again, instead of by Material type.
   The count_blocks and sample_ores commands max size has increased from 32 to 40.
   Unidentified Item Configuration settings have moved to their own config file.
